--- a/UCR.Negotium/Resources/Styles.xaml
+++ b/UCR.Negotium/Resources/Styles.xaml
@@ -174,4 +174,10 @@
         <Setter Property="ColumnWidth" Value="100"/>
         <Setter Property="Margin" Value="0,25,0,0"/>
     </Style>
+
+    <Style x:Key="multilineTextBox" TargetType="TextBox">
+        <Setter Property="TextWrapping" Value="Wrap"/>
+        <Setter Property="AcceptsReturn" Value="True"/>
+        <Setter Property="VerticalScrollBarVisibility" Value="Auto"/>
+    </Style>
 </ResourceDictionary>
